:bug: [#4390] Fix URL conversion messing with templates
The previous patch (183a08ed7db2fcdabfd16aa595452aee8223166f) fixed
the reported behaviour by making all URLs fully qualified,
instead of building relative URLs to the admin if the domain
happens to be the same.

However, we have some 'URLs' that are template variables and
are substituted out by the backend, e.g. '{{ continue_url }}'
which got mangled by this patch by taking the current location
and using that as the root - the template fragment was being
interpreted as a relative URL. This breaks those templates.

This patch addresses both cases by just leaving URLs untouched
and doing no conversion at all - relative URLs stay literally
that (and if they're template fragments, our backend properly
resolves them), while absolute URLs (to another form, for
example) that are pasted in stay absolute.

This leaves real relative URLs ambiguous, but such URLs
don't make much sense in Open Forms anyway and we recommend
users to always use fully qualified absolute URLs.

--- a/src/openforms/conf/tinymce_config.json
+++ b/src/openforms/conf/tinymce_config.json
@@ -10,6 +10,5 @@
     "default_link_target": "_blank",
     "link_default_protocol": "https",
     "link_assume_external_targets": true,
-    "relative_urls": false,
-    "remove_script_host": false
+    "convert_urls": false
 }
