--- a/docker/docker-compose.open-zaak.yml
+++ b/docker/docker-compose.open-zaak.yml
@@ -40,6 +40,7 @@ services:
       - CELERY_RESULT_BACKEND=redis://openzaak-redis:6379/1
       - NOTIFICATIONS_DISABLED=true
       - JWT_EXPIRY=99999999999  # Roughly 3170 years. This is required for tests with time frozen to work
+      - JWT_LEEWAY=99999999999  # Clock drift can cause a JWT that’s valid on the client to be considered not valid (yet, or anymore) on the server, leading to unexpected HTTP 403 errors.
       - CELERY_WORKER_CONCURRENCY=${CELERY_WORKER_CONCURRENCY:-2}
     ports:
       - 8003:8000
