--- a/requirements/base.in
+++ b/requirements/base.in
@@ -56,6 +56,7 @@ django-privates
 django-redis
 django-simple-certmanager
 django-solo
+django-structlog
 django-tinymce
 django-treebeard
 django-upgrade-check
