--- a/pyright.pyproject.toml
+++ b/pyright.pyproject.toml
@@ -43,6 +43,7 @@ include = [
     "src/openforms/prefill/contrib/family_members",
     # Registrations
     "src/openforms/registrations/tasks.py",
+    "src/openforms/registrations/contrib/demo/",
     "src/openforms/registrations/contrib/email/",
     "src/openforms/registrations/contrib/json_dump/",
     "src/openforms/registrations/contrib/stuf_zds/options.py",
