--- a/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectReferenceListsOptionsTests/SelectReferenceListsOptionsTests.test_table_with_paginated_items.yaml
+++ b/src/openforms/formio/dynamic_config/tests/files/vcr_cassettes/SelectReferenceListsOptionsTests/SelectReferenceListsOptionsTests.test_table_with_paginated_items.yaml
@@ -22,11 +22,11 @@ interactions:
       Content-Length:
       - '208'
       Content-Security-Policy:
-      - 'form-action ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
-        img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; worker-src
-        ''self'' blob:; default-src ''self''; script-src ''self'' ''unsafe-inline'';
-        object-src ''none''; frame-src ''self''; font-src ''self'' fonts.gstatic.com;
-        base-uri ''self'''
+      - 'img-src ''self'' data: cdn.redoc.ly; font-src ''self'' fonts.gstatic.com;
+        form-action ''self''; base-uri ''self''; worker-src ''self'' blob:; object-src
+        ''none''; frame-ancestors ''none''; frame-src ''self''; style-src ''self''
+        ''unsafe-inline'' fonts.googleapis.com; script-src ''self'' ''unsafe-inline'';
+        default-src ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
@@ -66,11 +66,11 @@ interactions:
       Content-Length:
       - '10910'
       Content-Security-Policy:
-      - 'form-action ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
-        img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; worker-src
-        ''self'' blob:; default-src ''self''; script-src ''self'' ''unsafe-inline'';
-        object-src ''none''; frame-src ''self''; font-src ''self'' fonts.gstatic.com;
-        base-uri ''self'''
+      - 'img-src ''self'' data: cdn.redoc.ly; font-src ''self'' fonts.gstatic.com;
+        form-action ''self''; base-uri ''self''; worker-src ''self'' blob:; object-src
+        ''none''; frame-ancestors ''none''; frame-src ''self''; style-src ''self''
+        ''unsafe-inline'' fonts.googleapis.com; script-src ''self'' ''unsafe-inline'';
+        default-src ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
@@ -108,11 +108,11 @@ interactions:
       Content-Length:
       - '225'
       Content-Security-Policy:
-      - 'form-action ''self''; style-src ''self'' ''unsafe-inline'' fonts.googleapis.com;
-        img-src ''self'' data: cdn.redoc.ly; frame-ancestors ''none''; worker-src
-        ''self'' blob:; default-src ''self''; script-src ''self'' ''unsafe-inline'';
-        object-src ''none''; frame-src ''self''; font-src ''self'' fonts.gstatic.com;
-        base-uri ''self'''
+      - 'img-src ''self'' data: cdn.redoc.ly; font-src ''self'' fonts.gstatic.com;
+        form-action ''self''; base-uri ''self''; worker-src ''self'' blob:; object-src
+        ''none''; frame-ancestors ''none''; frame-src ''self''; style-src ''self''
+        ''unsafe-inline'' fonts.googleapis.com; script-src ''self'' ''unsafe-inline'';
+        default-src ''self'''
       Content-Type:
       - application/json
       Cross-Origin-Opener-Policy:
